; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_archive.c_fz_has_archive_entry.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_archive.c_fz_has_archive_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { {}* }

@FZ_ERROR_GENERIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"cannot check if archive has entry\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fz_has_archive_entry(i32* %0, %struct.TYPE_4__* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = bitcast {}** %8 to i32 (i32*, %struct.TYPE_4__*, i8*)**
  %10 = load i32 (i32*, %struct.TYPE_4__*, i8*)*, i32 (i32*, %struct.TYPE_4__*, i8*)** %9, align 8
  %11 = icmp ne i32 (i32*, %struct.TYPE_4__*, i8*)* %10, null
  br i1 %11, label %16, label %12

12:                                               ; preds = %3
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* @FZ_ERROR_GENERIC, align 4
  %15 = call i32 @fz_throw(i32* %13, i32 %14, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %12, %3
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = bitcast {}** %18 to i32 (i32*, %struct.TYPE_4__*, i8*)**
  %20 = load i32 (i32*, %struct.TYPE_4__*, i8*)*, i32 (i32*, %struct.TYPE_4__*, i8*)** %19, align 8
  %21 = load i32*, i32** %4, align 8
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i32 %20(i32* %21, %struct.TYPE_4__* %22, i8* %23)
  ret i32 %24
}

declare dso_local i32 @fz_throw(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
